Added choose number of boxes button

--- a/index.html
+++ b/index.html
@@ -8,8 +8,11 @@
 
 </head>
 <body>
+    <div id="btn-cont">
+        <button>Change number of squares per side</button>
+    </div>
+
     <div id="container">
-        
     </div>
 </body>
 </html>
