Added grid dimm display

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 <body>
     <div id="btn-cont">
         <button>Change number of squares per side</button>
+        <div class="dispdim">Current Grid :</div>
     </div>
 
     <div id="container">
