--- a/index.html
+++ b/index.html
@@ -13,7 +13,6 @@
         <div class="dispdim">Current Grid :</div>
     </div>
 
-    <div id="container">
-    </div>
+    <div id="container"></div>
 </body>
 </html>
